--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 certifi==2018.8.24
 chardet==3.0.4
+cycler==0.10.0
 cymem==1.31.2
 cytoolz==0.9.0.1
 dill==0.2.8.2
 ftfy==5.5.0
 idna==2.7
 jsonschema==2.6.0
+kiwisolver==1.0.1
+matplotlib==3.0.0
 msgpack==0.5.6
 msgpack-numpy==0.4.4.1
 murmurhash==0.28.0
@@ -15,6 +18,7 @@ Pillow==5.3.0
 pkg-resources==0.0.0
 plac==0.9.6
 preshed==1.0.1
+pyparsing==2.2.2
 python-dateutil==2.7.3
 pytz==2018.5
 regex==2017.4.5
