--- a/schema/train_optimizer_config.json
+++ b/schema/train_optimizer_config.json
@@ -5,5 +5,6 @@
     "lr_init": 0.0001,
     "meta_lr": 0.001,
     "meta_epochs": 5,
-    "base_epochs": 10
+    "base_epochs": 10,
+    "seed": 42
 }
