--- a/schema/train_optimizer_config.json
+++ b/schema/train_optimizer_config.json
@@ -1,6 +1,6 @@
 {
     "$schema": "schema/train_optimizer_config_schema.json",
-    "task_directory_path": "/users/data/metanlp/nlp_datasets/airline_twitter_sentiment/airline_sampled_tasks/",
+    "train_config_path": "schema/train_config.json",
     "keep_coef_init": 0.9999,
     "lr_init": 0.0001,
     "meta_lr": 0.001,
