--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,40 @@
-certifi==2018.8.24
-chardet==3.0.4
-cycler==0.10.0
-cymem==1.31.2
-cytoolz==0.9.0.1
-dill==0.2.8.2
-ftfy==5.5.0
-idna==2.7
-jsonschema==2.6.0
-kiwisolver==1.0.1
-matplotlib==3.0.0
-msgpack==0.5.6
-msgpack-numpy==0.4.4.1
-murmurhash==0.28.0
-numpy==1.15.2
-pandas==0.23.4
-Pillow==5.3.0
-pkg-resources==0.0.0
-plac==0.9.6
-preshed==1.0.1
-pyparsing==2.2.2
-python-dateutil==2.7.3
-pytz==2018.5
-regex==2017.4.5
-requests==2.20.0
-scikit-learn==0.20.0
-scipy==1.1.0
-six==1.11.0
-sklearn==0.0
-spacy==2.0.12
-thinc==6.10.3
-toolz==0.9.0
-torch==0.4.1
-torchvision==0.2.1
-tqdm==4.26.0
-ujson==1.35
-urllib3==1.23
-wcwidth==0.1.7
-wrapt==1.10.11
+certifi         2018.10.15
+chardet         3.0.4     
+cycler          0.10.0    
+cymem           2.0.2     
+cytoolz         0.9.0.1   
+dill            0.2.8.2   
+ftfy            5.5.0     
+idna            2.7       
+jsonschema      2.6.0     
+kiwisolver      1.0.1     
+matplotlib      3.0.2     
+msgpack         0.5.6     
+msgpack-numpy   0.4.3.2   
+murmurhash      1.0.1     
+numpy           1.15.4    
+pandas          0.23.4    
+Pillow          5.3.0     
+pip             18.1      
+pkg-resources   0.0.0     
+plac            0.9.6     
+preshed         2.0.1     
+pyparsing       2.3.0     
+python-dateutil 2.7.5     
+pytz            2018.7    
+regex           2018.1.10 
+requests        2.20.1    
+scikit-learn    0.20.0    
+scipy           1.1.0     
+setuptools      40.6.2    
+six             1.11.0    
+sklearn         0.0       
+spacy           2.0.16    
+thinc           6.12.0    
+toolz           0.9.0     
+tqdm            4.28.1    
+ujson           1.35      
+urllib3         1.24.1    
+wcwidth         0.1.7     
+wheel           0.32.2    
+wrapt           1.10.11   
