--- a/schema/train_optimizer_config.json
+++ b/schema/train_optimizer_config.json
@@ -2,6 +2,8 @@
     "$schema": "schema/train_optimizer_config_schema.json",
     "train_config_path": "schema/train_config.json",
     "meta_lr": 0.001,
-    "meta_epochs": 300,
+    "meta_test_split": 0.2,
+    "meta_validation_split": 0.2,
+    "meta_epochs": 100,
     "seed": 42
 }
