--- a/schema/train_config.json
+++ b/schema/train_config.json
@@ -5,11 +5,11 @@
     "afn": "gelu",
     "opt": "adam",
     "seed": 42,
-    "n_iter": 2,
+    "n_iter": 1,
     "scores_per_epoch": 3,
-    "test_split": 0.33,
+    "test_split": 0.49,
     "validation_split": 0.01,
-    "batch_size": 8,
+    "batch_size": 4,
     "n_embd": 768,
     "n_head": 12,
     "n_layer": 12,
@@ -22,5 +22,5 @@
     "b1": 0.9,
     "b2": 0.999,
     "eps": 1e-8,
-    "sequence_dim": null
+    "sequence_dim": 60
 }
